# VerSeFusion

./: .gitignore  LICENSE  Makefile  README.md  WEIGHTS.md  pyproject.toml  requirements.txt
configs/: default.env  label_scheme.yaml  veridah_corrections.csv  verse_demographics.csv  verse_demographics.xlsx
containers/: README.md
docs/: crosswalk.md  design.md  label_scheme.md
nextflow/: main.nf  nextflow.config
scripts/: hpc_pull.sh  inventory.py  qc_overview.py
slurm/: _common.sh  apply_corrections.sh  build_manifest.sh  download_raw.sh  hf_export.sh  hf_stage.sh  hpc_pull.sh  lstv_audit.sh  make_splits.sh  manifest_builder.sh  orientation_audit.sh  qc.sh  renders.sh  reorient_pir.sh  splits_builder.sh  unify_iterations.sh  veridah.sh  veridah_renders.sh
src/verse_pipeline/: __init__.py  _render_helpers.py  cli_inventory.py  dataset.py  dataset_interface.py  demographics.py  download.py  hf_export.py  label_crosswalk.py  lstv.py  lstv_audit.py  manifest.py  manifest_builder.py  miccai.py  orientation_audit.py  qc.py  render_gallery.py  reorient.py  splits.py  splits_builder.py  unify.py  veridah.py  visualize.py  visualize_corrections.py
src/verse_pipeline/utils/: __init__.py  bids.py  centroid_json.py  demographics.py  miccai.py  nifti.py
tests/: test_bids.py  test_centroid_json.py  test_label_crosswalk.py  test_lstv.py  test_nifti.py
