[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verse_pipeline"
version = "0.1.0"
description = "Download, unify, and benchmark-export the VerSe 2019 + VerSe 2020 CT vertebrae datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Gregory J. Schwing", email = "gregory.schwing@wayne.edu" },
]
keywords = ["medical-imaging", "spine", "ct", "segmentation", "verse", "nnunet"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "nibabel>=5.2,<6",
    "SimpleITK>=2.3,<3",
    "numpy>=1.24,<2",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.31",
    "datasets>=2.18,<3",
    "huggingface_hub>=0.22",
    "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
verse-download   = "verse_pipeline.download:main"
verse-unify      = "verse_pipeline.unify:main"
verse-reorient   = "verse_pipeline.reorient:main"
verse-manifest   = "verse_pipeline.manifest:main"
verse-splits     = "verse_pipeline.splits:main"
verse-hf-export  = "verse_pipeline.hf_export:main"
verse-inventory  = "verse_pipeline.cli_inventory:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]   # line length handled separately

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
